Rajouté bourrée et rond de Saint Vincent

--- a/Passages/passages.tex
+++ b/Passages/passages.tex
@@ -15,18 +15,22 @@
 \label{sec:2-passages}
 
 
-\subsection{Passage 1 : 30 mn}
+\subsection{Passage 1 : 45 mn}
 \label{sec:passage-1}
 
 \subsubsection{Laridé 8 temps}
 
 \subsubsection{Plinn}
 
+\subsubsection{Bourrée 2 temps}
+
 \subsubsection{Laridé 6 temps}
 
 \subsubsection{Scottish}
 
 \subsubsection{Hanter dro}
+
+\subsubsection{Rond de Saint-Vincent}
 
 \subsubsection{(Mazurka)}
 ... en fonction du temps
