Rajoute temps des morceaux

--- a/Passages/passages.tex
+++ b/Passages/passages.tex
@@ -18,39 +18,44 @@
 \subsection{Passage 1 : 45 mn}
 \label{sec:passage-1}
 
-\subsubsection{Laridé 8 temps}
+\subsubsection{Laridé 8 temps (4:34)}
 
-\subsubsection{Plinn}
+\subsubsection{An dro (5:35)}
 
-\subsubsection{Bourrée 2 temps}
+\subsubsection{Hanter dro (6:18)}
 
-\subsubsection{Laridé 6 temps}
+\subsubsection{Scottish (5:19)}
 
-\subsubsection{Scottish}
+\subsubsection{Gavotte (9:14)}
 
-\subsubsection{Hanter dro}
+\subsubsection{Cercle circassien}
 
-\subsubsection{Rond de Saint-Vincent}
+\subsubsection{Plinn (10:?)}
 
-\subsubsection{(Mazurka)}
+\subsubsection{(Mazurka) (5:14)}
 ... en fonction du temps
+
+% 52 minutes en gros
+
 
 \subsection{Passage 2 : 45 mn}
 \label{sec:passage-2}
 
+\subsubsection{Laridé 6 temps (4:29)}
 
-\subsubsection{An dro}
+\subsubsection{Kost ar c'hoat (3:50)}
 
-\subsubsection{Kost ar c'hoat}
+\subsubsection{Dañs leon (4:58)}
 
-\subsubsection{Dañs léon}
+\subsubsection{Bourrée 2 temps (5:17)}
 
-\subsubsection{Cercle circassien}
+\subsubsection{Dañs Fisel (9:23)}
 
-\subsubsection{Gavotte}
+\subsubsection{Valse (4:48)}
 
-\subsubsection{Valse}
+\subsubsection{Rond de Saint-Vincent (5:20)}
 
-\subsubsection{Galop nantais}
+\subsubsection{Galop nantais (4:29)}
+
 
 \end{document}
